--- a/css/index.css
+++ b/css/index.css
@@ -9,6 +9,7 @@
     /* Body Copy */
     --Font-size-paragraph: 14px;
 }
+
 * {
     box-sizing: border-box;
     margin: 0;
@@ -27,6 +28,7 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: var(--White);
+    border-radius: 6px;
 }
 
 @media (max-width:767px) {
@@ -36,10 +38,8 @@ body {
 }
 
 /* Image */
-
-
 .product-preview .image img {
-    width: 250px;
+    width: 300px;
     height: 400px;
     border-radius: 6px 0 0 6px;
 }
@@ -54,14 +54,19 @@ body {
 
 /* Text */
 .product-preview .texts {
-    width: 250px;
+    width: 300px;
     height: 400px;
     background-color: var(--White);
-    padding: 20px;
+    padding: 25px 20px 20px 20px;
     border-radius: 0 6px 6px 0px;
 
 }
 
+@media (max-width: 767px) {
+    .product-preview .texts {
+        border-radius: 0 0 6px 6px;
+    }
+}
 
 .product-preview .texts p {
     color: var(--Dark-grayish-blue);
@@ -77,6 +82,7 @@ body {
 
 .product-preview .texts p:nth-of-type(2) {
     line-height: 1.5;
+    padding: 15px 0;
 }
 
 .product-preview .texts>h2:first-of-type {
@@ -100,9 +106,9 @@ body {
 }
 
 .product-preview .texts .prise>p:nth-of-type(1) {
-    padding-left: 15px;
+    padding-left: 20px;
     font: caption;
-    font-size: 10px;
+    font-size: 15px;
     text-decoration: line-through;
 }
 
