--- a/css/index.css
+++ b/css/index.css
@@ -27,8 +27,8 @@ body {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background-color: var(--White);
-    border-radius: 6px;
+    /* background-color: var(--White); */
+    border-radius: 10px;
 }
 
 @media (max-width:767px) {
@@ -65,6 +65,8 @@ body {
 @media (max-width: 767px) {
     .product-preview .texts {
         border-radius: 0 0 6px 6px;
+        top: -4px;
+        position: relative;
     }
 }
 
